<resources>
    <string name="app_name">HATSUN</string>
    <string name="enter_name">Enter Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signin">Signin</string>
    <string name="signup">Signup</string>
    <string name="continue_gamil">Continue with Gmail</string>
    <string name="continue_fb">Continue with Facebook</string>
    <string name="other_singin">Other Signin</string>
    <string name="otp_sent">Verification code has been sent to </string>
    <string name="resend">Resend OTP?</string>
    <string name="dont_account">Dont Have An Account?</string>
    <string name="forget_password">Forget Password?</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string name="reg_user">Your Already Register User,Please Signin</string>
    <string name="enter_valid">Please Enter Valid Data</string>
    <string name="mail_sent">Mail Sent Successfully"</string>
    <string name="no_user_data">"No User Data"</string>
    <string name="not_register">You are not registerd,Please signup</string>
    <string name="wrong_username">You have entered wrong username or password</string>
    <string name="ups_data">UPS data cant be empty</string>
    <string name="rack_data">RackNo cant be empty</string>
    <string name="slave_data">SlaveNo cant be empty</string>
    <string name="slave_type_empty">SlaveType cant be empty</string>

    <string name="client_name">Client Name</string>
    <string name="plant_name">Plant Name</string>
    <string name="battery_id">Battery ID</string>
    <string name="battery_no">Battery Room #</string>
    <string name="ups_no">UPS #</string>
    <string name="race_id">Ract ID #</string>
    <string name="slave_id">Slave ID #</string>
    <string name="slave_type">Slave Type</string>

    <string name="data_success">Data Synced Successfully</string>

    <string name="sosaley">Sosaley Technologies Private Limited</string>
    <string name="w3sos">www.sosaley.in</string>

    <string name="forget_password_text">Enter Mobile Number</string>
    <string name="valid_name">Name is too short</string>
    <string name="valid_mobile">Mobile number should be in 10 digit</string>
    <string name="valid_email">Please Enter Valid Email Address</string>
    <string name="valid_password">Password should have minimum 6 characters</string>

    <string name="enter_password">Please Enter Password</string>
    <string name="enter_confirm_password">Please Enter Confirm Password</string>

    <string name="not_changed">You have not changed any value,Please change</string>

    <string name="mismatch_ups">UPS Data Mismatch</string>
    <string name="mismatch_rack">RackId Mismatch</string>
    <string name="mismatch_slaveid">Slave Id Mismatch</string>
    <string name="mismatch_slavetype">Slave Type Mismatch</string>
</resources>