<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/ten_dp"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password_text"
        android:layout_centerHorizontal="true"
        android:textColor="@color/red"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ForgetPasswordMobileBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifty_dp"
        android:layout_marginLeft="@dimen/two_dp"
        android:layout_marginRight="@dimen/two_dp"
        >

        <EditText
            android:id="@+id/forgetPasswordMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"
            android:gravity="left"
            android:fontFamily="sans-serif-condensed"
            android:drawableRight="@drawable/mobile_icon"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitForgetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_below="@+id/ForgetPasswordMobileBlock"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="@dimen/five_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:background="@drawable/background_shape"

        />

    <Button
        android:id="@+id/cancelforgetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ForgetPasswordMobileBlock"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginLeft="@dimen/five_dp"
        android:visibility="gone"
        />

    </RelativeLayout>


</RelativeLayout>