<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".authentication.ResetPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/resetPasswordBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/thirty_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginRight="@dimen/thirty_dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/resetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="left"
                android:hint="@string/password"
                android:inputType="textPassword"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/resetConfirmPasswordBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/resetPasswordBlock"
            android:layout_marginLeft="@dimen/thirty_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginRight="@dimen/thirty_dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/resetConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="left"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnResetSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_below="@id/resetConfirmPasswordBlock"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_centerInParent="true"
            android:background="@drawable/background_shape"
            />

    </RelativeLayout>


</RelativeLayout>