<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".menu.EditActivity"  >



    <RelativeLayout
        android:id="@+id/qrDisplayEditBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/hundren_dp"
        >

        <RelativeLayout
            android:id="@+id/clientNameBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/five_dp"
            android:layout_marginRight="@dimen/five_dp"
            >

            <TextView
                android:id="@+id/clientNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/client_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/clientNameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="Hutsan Agro Products"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/plantNameBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/clientNameBlock"
            android:layout_marginLeft="@dimen/five_dp"
            android:layout_marginRight="@dimen/five_dp"
            android:layout_marginTop="@dimen/five_dp"
            >

            <TextView
                android:id="@+id/plantNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/plant_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/plantNameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="Plant Name"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/batteryIdBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/plantNameBlock"
            android:layout_marginLeft="@dimen/five_dp"
            android:layout_marginRight="@dimen/five_dp"
            android:layout_marginTop="@dimen/five_dp"
            >

            <TextView
                android:id="@+id/batteryIdTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/battery_id"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/batteryIdEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="B20"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/batteryBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/batteryIdBlock"
            android:layout_marginLeft="@dimen/five_dp"
            android:layout_marginRight="@dimen/five_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            >

            <TextView
                android:id="@+id/batteryTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/battery_no"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                />

            <EditText
                android:id="@+id/batteryEdit"
                android:layout_width="@dimen/hundren_dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="3"
                android:maxLines="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/upsBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/batteryBlock"
            android:layout_marginLeft="@dimen/five_dp"
            android:layout_marginRight="@dimen/five_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            >
            <TextView
                android:id="@+id/upsTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/ups_no"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                />

            <EditText
                android:id="@+id/upsEdit"
                android:layout_width="@dimen/hundren_dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="3"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rackBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/upsBlock"
            android:layout_marginLeft="@dimen/five_dp"
            android:layout_marginRight="@dimen/five_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            >
            <TextView
                android:id="@+id/rackTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/race_id"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                />

            <EditText
                android:id="@+id/rackEdit"
                android:layout_width="@dimen/hundren_dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="3"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/slaveIdBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rackBlock"
            android:layout_marginLeft="@dimen/five_dp"
            android:layout_marginRight="@dimen/five_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            >

            <TextView
                android:id="@+id/slaveTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/slave_id"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                />

            <EditText
                android:id="@+id/slaveEdit"
                android:layout_width="@dimen/hundren_dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="3"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/slaveTypeBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/slaveIdBlock"
            android:layout_marginLeft="@dimen/five_dp"
            android:layout_marginRight="@dimen/five_dp"
            android:layout_marginTop="@dimen/twenty_dp">

            <TextView
                android:id="@+id/slaveTypeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/slave_type"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                />

            <EditText
                android:id="@+id/slaveTypeEdit"
                android:layout_width="@dimen/hundren_dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="3"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

        </RelativeLayout>

    </RelativeLayout>


    <Button
        android:id="@+id/btnEditSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="@drawable/background_shape"
        android:layout_below="@+id/qrDisplayEditBlock"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/ten_dp"

        />


</RelativeLayout>